# esp-network

./: .gitignore  CMakeLists.txt  sdkconfig
components/Collections-C/: CMakeLists.txt
components/esp-idf-wifi-provisioner/: .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/esp-idf-wifi-provisioner/.github/workflows/: upload_component.yml
components/esp-idf-wifi-provisioner/examples/basic/: CMakeLists.txt  README.md
components/esp-idf-wifi-provisioner/examples/basic/main/: main.c
components/esp-idf-wifi-provisioner/include/: wifi_provisioner.h
components/esp-idf-wifi-provisioner/src/: dns_server.c  http_server.c  nvs_store.c  wifi_ap.c  wifi_prov_internal.h  wifi_provisioner.c  wifi_sta.c
components/esp-idf-wifi-provisioner/src/html/: README.md  portal.html
components/esp-idf-wifi-provisioner/src/html/config/: index.html
components/esp-idf-wifi-provisioner/src/html/scan/: index.html
ctrl/: go.mod  go.sum  main.go
ctrl/api/: api.go  auth.go
ctrl/device/: device.go
ctrl/proto/: proto.go
ctrl/proxy/: client.go
ctrl/socks5/: socks5.go
ctrl/static/: index.html  login.html
main/: CMakeLists.txt  cpu_monitor.c  cpu_monitor.h  esp32-network.c  hid_transport.c  hid_transport.h  proto.c  proto.h  tcp_mgr.c  tcp_mgr.h  wifi_mgr.c  wifi_mgr.h
proxy/: go.mod  main.go
