idf_component_register(
    SRCS
        "esp32-network.c"
        "proto.c"
        "wifi_mgr.c"
        "cpu_monitor.c"
        "tcp_mgr.c"
        "hid_transport.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        esp_timer
        esp_system
        driver
        lwip
)
